# dr-llama

./: .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
app/: main.py
app/api/: routes.py
app/data/processors/: document_processor.py
app/data/services/: document_service.py
app/data/vector_store/: service.py
app/utils/: logger.py
models/: model_config.py
models/inference/: base_model.py
models/training/: trainer.py
scripts/: init_milvus.py  setup_dev.py  train_model.py
scripts/data/documents/: sample_document.txt
src/: config.py  main.py
src/api/: routes.py
src/data/processors/: document_processor.py
src/data/services/: __init__.py  document_service.py
src/data/vectors/: __init__.py  config.py  service.py
src/models/: document.py
src/models/inference/: base_model.py
src/models/training/: trainer.py
src/utils/: logger.py  metrics.py
